# Artixide

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  command.rs  config.rs  extensions.rs  macros.rs  main.rs  string.rs  tui.rs  views.rs
src/app/: logging.rs  preparation.rs
src/config/: locale.rs
src/tui/: data.rs  route.rs  route_map.rs  views.rs  widgets.rs
src/tui/data/: keyboard.rs  locale.rs  mirror.rs  partition.rs  timezones.rs
src/tui/data/partition/: impls.rs
src/tui/views/: keyboard.rs  locale.rs  main.rs  mirror.rs  partition.rs  timezone.rs
src/tui/views/partition/: editor.rs
src/tui/widgets/: customs.rs  input.rs  menu.rs  selectable.rs  table.rs
src/tui/widgets/customs/: block_style.rs
src/tui/widgets/menu/: searchable.rs  searchable_cached.rs
src/views/: home.rs  keyboard.rs
src/widgets/: list.rs  menu.rs
