[package]
name = "artixide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
crossterm = "0.26.1"
fuzzy-matcher = "0.3.7"
indoc = "2.0.2"
log = "0.4.19"
ratatui = { version = "0.21.0", features = ["crossterm"] }
regex = "1.9.1"
sudo = "0.6.0"
tui-logger = { version = "0.9.2", default-features = false, features = ["ratatui-support"] }

[profile.dev.package.backtrace]
opt-level = 3
