[package]
name = "artixide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
crossterm = "0.26.1"
delegate = "0.10.0"
derive-getters = "0.3.0"
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut"] }
derive_setters = "0.1.6"
fuzzy-matcher = "0.3.7"
gptman = "1.0.1"
humansize = "2.1.3"
indexmap = "2.0.0"
indoc = "2.0.2"
itoap = "1.0.1"
log = "0.4.19"
once_cell = "1.18.0"
ratatui = "0.21.0"
regex = "1.9.1"
scopeguard = "1.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
smart-default = "0.7.1"
strum = { version = "0.25.0", features = ["derive"] }
sudo = "0.6.0"
tui-logger = { version = "0.9.2", default-features = false, features = ["ratatui-support"] }
typed-builder = "0.15.2"
unicode-width = "0.1.10"
walkdir = "2.3.3"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
